<resources>
    <string name="app_name">FoodDream</string>
    <string name="support_icon">Customer Support Button</string>
    <string name="help_icon">User Guide Button</string>
    <string name="guest">Continue as a Guest</string>
    <string name="login_button">Login</string>
    <string name="password_placeholder">Password</string>
    <string name="email_placeholder">Email</string>
    <string name="login_placeholder">Login</string>
    <string name="logo_placeholder">Food Dream</string>
    <string name="logo">Logo of Food Dream</string>
    <string name="signup">Sign Up</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="register_button">Sign Up</string>
    <string name="signup_placeholder">Sign Up</string>
    <string name="login">Login</string>
    <string name="submit_button">Submit</string>
    <string name="verify_placeholder">Verify Email</string>
    <string name="code_placeholder">Enter Code</string>
    <string name="exit">Exit</string>
    <string name="fname_placeholder">Firstname</string>
    <string name="name_placeholder">Name</string>
    <string name="support_placeholder">Customer Support</string>
    <string name="support_message_placeholder">Enter a message to send to our support team.</string>
    <string name="enter_email_placeholder">Enter email</string>
    <string name="new_password_placeholder">Enter new password</string>
    <string name="search">Search…</string>
    <string name="price">Price</string>
    <string name="checkout">Checkout</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="item_count">Item Count</string>
    <string name="address">Address</string>
    <string name="postcode">Postcode</string>
    <string name="town">Town</string>
    <string name="payment">Payment</string>
    <string name="select_payment">Select Payment</string>
    <string name="pay">Pay</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_address">Enter address</string>
    <string name="enter_postcode">Enter postcode</string>
    <string name="enter_town">Enter town</string>
    <string name="account">Account</string>
    <string name="enter_password">Enter password</string>
    <string name="update">Update</string>
    <string name="order_history">Order History</string>
    <string name="arrow"><![CDATA[>]]></string>
    <string name="order_number">Order Number</string>
    <string name="total">Total</string>
    <string name="date">Date</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="your_most_recent_order">Your most recent order.</string>
    <string name="order_item_name">Order Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="user_guide">User Guide</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="weight_grams">Weight (grams)</string>
    <string name="allergens">Allergens</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="done">Done</string>
    <string name="enter_image_url">Enter image URL</string>
    <string name="image">Image</string>
    <string name="product_name">Product Name</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="stock">Stock</string>
    <string name="enter_product_stock">Enter product stock</string>
    <string name="add_product">Add Product</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="enter_product_category">Enter product category</string>
    <string name="enter_product_country_of_origin">Enter product country of origin</string>
    <string name="country_of_origin">Country of Origin</string>
    <string name="edit_product">Edit Product</string>
    <string name="confirm">Confirm</string>
    <string name="delete_product">Delete Product?</string>
    <string name="are_you_sure_you_want_to_delete_this_product_this_action_cannot_be_undone">Are you sure you want to delete this product? This action cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
</resources>