<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="32dp">


    <RelativeLayout
        android:id="@+id/order_layout"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:paddingBottom="28dp"
        android:layout_height="wrap_content"
        android:background="@drawable/order_history_background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="24dp"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_background">

            <TextView
                android:id="@+id/email_address_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingTop="4dp"
                android:paddingVertical="2dp"
                android:textSize="14sp"
                android:layout_marginHorizontal="24dp"
                android:textColor="#FFFFFF"
                android:text="@string/email_placeholder"/>

            <TextView
                android:id="@+id/name_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="14sp"
                android:layout_marginHorizontal="24dp"
                android:layout_below="@id/email_address_order"
                android:textColor="#FFFFFF"
                android:text="@string/name_placeholder"/>

            <TextView
                android:id="@+id/address_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="14sp"
                android:layout_below="@+id/name_order"
                android:layout_marginHorizontal="24dp"
                android:textColor="#FFFFFF"
                android:text="@string/address"/>

            <TextView
                android:id="@+id/postcode_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="14sp"
                android:layout_below="@+id/address_order"
                android:layout_marginHorizontal="24dp"
                android:textColor="#FFFFFF"
                android:text="@string/postcode"/>

            <TextView
                android:id="@+id/town_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="14sp"
                android:layout_below="@+id/postcode_order"
                android:layout_marginHorizontal="24dp"
                android:textColor="#FFFFFF"
                android:text="@string/town"/>

            <TextView
                android:id="@+id/payment_method_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="14sp"
                android:layout_below="@+id/town_order"
                android:layout_marginHorizontal="24dp"
                android:textColor="#FFFFFF"
                android:text="@string/payment"/>

            <TextView
                android:id="@+id/date_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingBottom="2dp"
                android:textSize="14sp"
                android:layout_below="@+id/payment_method_order"
                android:layout_marginHorizontal="24dp"
                android:textColor="#FFFFFF"
                android:text="@string/date"/>

            <TextView
                android:id="@+id/total_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:paddingBottom="4dp"
                android:layout_below="@+id/date_order"
                android:textSize="14sp"
                android:layout_marginHorizontal="24dp"
                android:textColor="#FFFFFF"
                android:text="@string/total"/>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/order_item_layout"
        android:layout_width="match_parent"
        android:layout_marginVertical="32dp"
        android:paddingBottom="28dp"
        android:layout_below="@+id/order_layout"
        android:layout_height="wrap_content"
        android:background="@drawable/order_history_background">

        <androidx.recyclerview.widget.RecyclerView
            android:focusable="false"
            android:id="@+id/order_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</RelativeLayout>