<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="30dp"
    android:focusable="false"
    android:foreground="@drawable/card_border"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/order_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingVertical="12dp"
            android:textSize="14sp"
            android:layout_marginHorizontal="24dp"
            android:textColor="#FFFFFF"
            android:text="@string/order_number"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingBottom="12dp"
            android:textSize="14sp"
            android:layout_below="@+id/order_number"
            android:layout_marginHorizontal="24dp"
            android:textColor="#FFFFFF"
            android:text="@string/date"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="34dp"
            android:textSize="32sp"
            android:layout_alignEnd="@+id/date"
            android:textColor="#FFFFFF"
            android:text="@string/arrow"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:paddingBottom="12dp"
            android:layout_below="@+id/date"
            android:textSize="14sp"
            android:layout_marginHorizontal="24dp"
            android:textColor="#FFFFFF"
            android:text="@string/total"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>