<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/customer_support_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".views.LoginView">

        <FrameLayout
            android:id="@+id/customer_support_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#000000">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="96dp"
                android:layout_height="128dp"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/logo"
                android:paddingStart="24dp"
                android:fontFamily="@font/transcity"
                android:paddingTop="42dp"
                android:textStyle="bold"
                android:text="@string/logo_placeholder"
                android:textColor="#ffffff"
                android:textSize="48sp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/supportPagePlaceholder"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="38dp"
                android:layout_marginTop="48dp"
                android:text="@string/support_placeholder"
                android:textStyle="bold"
                android:textColor="#000000"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:textSize="24sp">
            </TextView>

            <TextView
                android:id="@+id/support_messagePlaceholder"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="40dp"
                android:text="@string/support_message_placeholder"
                android:textStyle="bold"
                android:textColor="#5f5f5f"
                android:maxLines="1"
                android:paddingHorizontal="12dp"
                android:textSize="12sp">
            </TextView>

            <EditText
                android:id="@+id/support_message"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="48dp"
                android:autofillHints="enquiry"
                android:focusable="true"
                android:inputType="text"
                android:maxLines="7"
                android:paddingHorizontal="12dp"
                android:textSize="16sp"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#000000"
                android:minHeight="56dp"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp"
                android:text="@string/submit_button"
                android:textColor="#ffffff"
                android:textSize="16sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="284dp"
            android:layout_height="404dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/exitPlaceholder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/exit"
                android:textStyle="bold"
                android:layout_marginVertical="32dp"
                android:textColor="#000000"
                android:textSize="12sp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:id="@+id/helpIcon"
                android:layout_width="64dp"
                android:layout_height="84dp"
                android:contentDescription="@string/help_icon"
                android:src="@drawable/helpicon" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/customerSupportIcon"
                android:layout_width="76dp"
                android:layout_height="96dp"
                android:contentDescription="@string/support_icon"
                android:src="@drawable/supporticon" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>