<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <FrameLayout
        android:background="@color/white"
        android:id="@+id/basket_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000">

            <TextView
                android:id="@+id/priceText"
                android:layout_width="276dp"
                android:layout_height="wrap_content"
                android:paddingStart="18dp"
                android:paddingTop="18dp"
                android:layout_marginBottom="18dp"
                android:textStyle="bold"
                android:text="@string/price"
                android:textColor="#ffffff"
                android:maxLines="1"
                android:textSize="32sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/checkoutButton"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/checkout"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@+id/priceText"
                android:backgroundTint="#ff5555" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="78dp">

            <TextView
                android:id="@+id/itemQuantityHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="18dp"
                android:paddingTop="18dp"
                android:layout_marginBottom="18dp"
                android:textStyle="bold"
                android:text="@string/item_count"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:focusable="false"
            android:id="@+id/basket_view"
            android:background="@color/white"
            android:layout_marginTop="124dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

</RelativeLayout>

